--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "message",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.2",
     "eventproxy": "^1.0.0",
     "express": "^4.16.4",
