--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cheerio": "^1.0.0-rc.2",
     "eventproxy": "^1.0.0",
     "express": "^4.16.4",
+    "nodemailer": "^4.7.0",
     "sanitize": "^2.1.0",
     "should": "^13.2.3",
     "superagent": "^4.0.0",
