--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.2",
+    "cookie-parser": "^1.4.3",
     "eventproxy": "^1.0.0",
     "express": "^4.16.4",
     "nodemailer": "^4.7.0",
